tweak index for new class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 			with different steps depending on whether you want to use command-line or not (command-line is
 			strongly encouraged but not necessary).</p>-->
 
-			<h2>First Class</h2>
+			<h2>Before the workshop</h2>
+			<p>If you are able to do so, please install git on your laptop before the workshop.
+				We will try and set up a time to be available before the workshop begins to help out with this. But give it a try first:
+			</p>
            
 		<ul>
 			<!--<li>Set yourself up with GitHub - see instructions below</a><span class="note"> (btw, you don't need to use GitHub to use Git, but it does give you a lot of benefits).</span></li>-->
@@ -35,7 +38,6 @@
              
 			<li><a href="resources.html">Resources for learning more about Git<a></li>
 			<li><a href="resources.html#class">Contact us<a></li>
-			<li><a href="http://ecourses.ala.org/course/view.php?id=506">Class page in Moodle</a></li>
 		</ul>
        <!--  <div id="gh-login">
          	<h2>GitHub</h2>
