--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		<div id="nav"> <a href="index.html">Beginning Git and GitHub</a></div>
 		<h1 id="header">A Guide for the LITA class</h1>
 		<div id="main">
-		<p>This is a resource guide for the 2017 LITA class, "Beginning Git & GitHub". 
-			</p>
+		
 
 			<!--<p><a href="https://docs.google.com/presentation/d/1HlLd6Sf-ylMv4j8znBSpskA_5ud2J_sWFzWsn3eS8pg/edit?usp=sharing">See the slides from this class</a></p>-->
 
@@ -22,40 +21,51 @@
 			with different steps depending on whether you want to use command-line or not (command-line is
 			strongly encouraged but not necessary).</p>-->
 
-			<h2>Before the workshop</h2>
-			<p>If you are able to do so, please install git on your laptop before the workshop.
-				We will try and set up a time to be available before the workshop begins to help out with this. But give it a try first:
-			</p>
-           
-		<ul>
-			<!--<li>Set yourself up with GitHub - see instructions below</a><span class="note"> (btw, you don't need to use GitHub to use Git, but it does give you a lot of benefits).</span></li>-->
-			<!--<li><a href="git_with_gui.html">Use Git with a GUI</a> (meaning, <em>without</em> the command-line)</li>-->
-			<li><a href="install_git.html">Install Git</a></li>
-        </ul>
-        <h2>More about the class</h2>
-        <ul>
+			
 
              
-			<li><a href="resources.html">Resources for learning more about Git<a></li>
-			<li><a href="resources.html#class">Contact us<a></li>
-		</ul>
-       <!--  <div id="gh-login">
-         	<h2>GitHub</h2>
-         	<p>You'll probably want to use GitHub as a space to view and store your own projects and view other people's. </p>
-         		<ol>
-         			<li>Get a user name and password: <a href="https://github.com/join">https://github.com/join</a></li>
-         			<li>Look around at the repositories already on GitHub. You might recognize a few:</li>
-         				<ul>
-         					<li><a href="https://github.com/jquery/jquery">JQuery</a></li>
-         					<li><a href="https://github.com/NYPL">NYPublic Library</a></li>
-         					<li><a href="https://github.com/fcrepo4">Fedora</a></li>
-         					<li><a href="https://github.com/hklish01/gettingtoknowgit/tree/gh-pages">The code for this webpage</a>
-         			    </ul>
-         			  </ol> 
-              <p>The next step involves working with Git on your own computer. You have two options:<ol><li><a href="git_with_commandline.html">Work on the command-line</a> <span class="note">(do it!)</span></li> <li><a href="git_with_gui.html">Work with a GUI tool</a> (use your mouse)</li>. </p>
+			
+		    Logistics (time, date, location, instructors) </h2>
+<ul>
+	<li>Friday, June 21</li>
+	<li>12:00 PM - 4:00 PM</li>
+	<li>Kate Bronstad, Heather Klish, Ari Gofman </li>
+			</ul>
 
 
-		</div>	-->
+<p>Link back to registration & ALA: https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=518954&query=Git 
+	https://2019.alaannual.org/registration/ticketed-events#LITA </p>
 
+
+General intro to Git (text from promo) 
+
+<p>
+Work smarter, collaborate faster and share code or other files with the library community using the popular version control system Git. Featuring a mix of git fundamentals and hands-on exercises, participants learn the basics of Git, learn how to use key commands, and how to use GitHub to their advantage, including sharing their own work and building upon the projects of others. 
+Git is a tool (technically, a version control system) that allows you to easily track changes in your files, scripts, websites, or entire programs. You can run it on your own computer for your own projects, but Git also makes it easy to collaborate with others on shared projects - thus helpful to small teams, large organizations, and people coordinating on open source projects. Easier collaboration is not the only advantage to using Git: you can also easily test out changes and write new code without threatening your existing work. It is very popular – verging on a necessity – amongst coders. 
+GitHub is a website that allows you to easily host and manage the code for git-tracked projects. It simplifies collaboration among project contributors, and is especially helpful for open source projects where you don’t necessarily meet your fellow contributors in real life. GitHub is free if your code is open to the public. 
+Bring your laptop for an afternoon of hands on exploration!
+		    </p>
+
+		    <h2>Who is this for? </h2>
+
+
+<p>This course is aimed at folks who are interested in developing skills in: 
+collaborating & coordinating on projects with people anywhere in the world
+managing your own projects
+backing up projects
+adapting existing projects for your own use
+storing & sharing customizations for ILLiad, LibGuides, EZproxy etc. 
+	building & hosting a free website or personal project files </p>
+
+
+<p>You don't need to have any previous knowledge of the tools that will be presented at the workshop. </p>
+
+
+<p>Participants should bring a laptop with a Mac, Linux, or Windows operating system (not a tablet) that they have administrative privileges on. If this is not possible for you but you are interested in attending, please contact the instructors who will try to assist. Please let the instructors know if you are planning on using a Chromebook. Participants should download the required software before the workshop. All attendees will abide by the ALA Code of Ethics. 
+		    </p>
+
+		    <h3>Accessibility Information</h3>
+		    <p>To come with room assignment. If you have specific accessibility requirements, please let the instructors know. 
+		    </p>
 </body>
 </html>		
