add additional markup to 2019 class description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div id="nav"> <a href="index.html">Beginning Git and GitHub</a></div>
-		<h1 id="header">A Guide for the LITA class</h1>
+		<h1 id="header">Beginning Git and GitHub Workshop at ALA Annual</h1>
 		<div id="main">
 		
 
@@ -33,16 +33,20 @@
 			</ul>
 
 
-<p>Link back to registration & ALA: https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=518954&query=Git 
-	https://2019.alaannual.org/registration/ticketed-events#LITA </p>
+			<p><a href="https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=518954&query=Git 
+	https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA</a>:  </p>
 
 
 General intro to Git (text from promo) 
 
 <p>
 Work smarter, collaborate faster and share code or other files with the library community using the popular version control system Git. Featuring a mix of git fundamentals and hands-on exercises, participants learn the basics of Git, learn how to use key commands, and how to use GitHub to their advantage, including sharing their own work and building upon the projects of others. 
-Git is a tool (technically, a version control system) that allows you to easily track changes in your files, scripts, websites, or entire programs. You can run it on your own computer for your own projects, but Git also makes it easy to collaborate with others on shared projects - thus helpful to small teams, large organizations, and people coordinating on open source projects. Easier collaboration is not the only advantage to using Git: you can also easily test out changes and write new code without threatening your existing work. It is very popular – verging on a necessity – amongst coders. 
-GitHub is a website that allows you to easily host and manage the code for git-tracked projects. It simplifies collaboration among project contributors, and is especially helpful for open source projects where you don’t necessarily meet your fellow contributors in real life. GitHub is free if your code is open to the public. 
+
+			</p>
+			<p>Git is a tool (technically, a version control system) that allows you to easily track changes in your files, scripts, websites, or entire programs. You can run it on your own computer for your own projects, but Git also makes it easy to collaborate with others on shared projects - thus helpful to small teams, large organizations, and people coordinating on open source projects. Easier collaboration is not the only advantage to using Git: you can also easily test out changes and write new code without threatening your existing work. It is very popular – verging on a necessity – amongst coders. 
+
+			</p>
+			<p>GitHub is a website that allows you to easily host and manage the code for git-tracked projects. It simplifies collaboration among project contributors, and is especially helpful for open source projects where you don’t necessarily meet your fellow contributors in real life. GitHub is free if your code is open to the public. 
 Bring your laptop for an afternoon of hands on exploration!
 		    </p>
 
@@ -50,12 +54,15 @@ Bring your laptop for an afternoon of hands on exploration!
 
 
 <p>This course is aimed at folks who are interested in developing skills in: 
-collaborating & coordinating on projects with people anywhere in the world
-managing your own projects
-backing up projects
-adapting existing projects for your own use
-storing & sharing customizations for ILLiad, LibGuides, EZproxy etc. 
-	building & hosting a free website or personal project files </p>
+
+	<ul>
+		<li>collaborating & coordinating on projects with people anywhere in the world</li>
+		<li>managing your own projects</li>
+<li>backing up projects</li>
+<li>adapting existing projects for your own use</li>
+<li>storing & sharing customizations for ILLiad, LibGuides, EZproxy etc.</li> 
+	<li>building & hosting a free website or personal project files </li>
+			</ul></p>
 
 
 <p>You don't need to have any previous knowledge of the tools that will be presented at the workshop. </p>
