further clean up

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
 
 			<p><a href="https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=518954&query=Git 
-	https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA</a>:  </p>
+	https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA</a> </p>
 
 
-General intro to Git (text from promo) 
+			<h2>General intro to Git</h2>
 
 <p>
 Work smarter, collaborate faster and share code or other files with the library community using the popular version control system Git. Featuring a mix of git fundamentals and hands-on exercises, participants learn the basics of Git, learn how to use key commands, and how to use GitHub to their advantage, including sharing their own work and building upon the projects of others. 
@@ -60,8 +60,8 @@ Bring your laptop for an afternoon of hands on exploration!
 		<li>managing your own projects</li>
 <li>backing up projects</li>
 <li>adapting existing projects for your own use</li>
-<li>storing & sharing customizations for ILLiad, LibGuides, EZproxy etc.</li> 
-	<li>building & hosting a free website or personal project files </li>
+<li>storing & sharing customizations for ILLiad, LibGuides, EZproxy etc</li> 
+<li>building & hosting a free website or personal project files </li>
 			</ul></p>
 
 
