change a few words

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
              
 			
-		    Logistics (time, date, location, instructors) </h2>
+		    Logistics </h2>
 <ul>
 	<li>Friday, June 21</li>
 	<li>12:00 PM - 4:00 PM</li>
@@ -37,7 +37,7 @@
 	https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA</a> </p>
 
 
-			<h2>General intro to Git</h2>
+			<h2>What is Git?</h2>
 
 <p>
 Work smarter, collaborate faster and share code or other files with the library community using the popular version control system Git. Featuring a mix of git fundamentals and hands-on exercises, participants learn the basics of Git, learn how to use key commands, and how to use GitHub to their advantage, including sharing their own work and building upon the projects of others. 
