add initial contact & style set up

--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
              
 			
 		    Logistics </h2>
-<ul>
+<ul class="no-bullets">
 	<li>Friday, June 21</li>
 	<li>12:00 PM - 4:00 PM</li>
 	<li>Kate Bronstad, Heather Klish, Ari Gofman </li>
+	<li><a href="https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=518954&query=Git 
+		https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA info</a></li> </p>
 			</ul>
 
+			<h2 id="contact">Contact</h2>
+           <p>Please email Kate Bronstad at <a href="mailto:kate.bronstad@tufts.edu">kate.bronstad@tufts.edu</a>.</p>
 
-			<p><a href="https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=518954&query=Git 
-	https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA</a> </p>
+			
 
 
 			<h2>What is Git?</h2>
@@ -72,7 +75,7 @@ Bring your laptop for an afternoon of hands on exploration!
 		    </p>
 
 		    <h3>Accessibility Information</h3>
-		    <p>To come with room assignment. If you have specific accessibility requirements, please let the instructors know. 
+		    <p>To come with room assignment. If you have specific accessibility requirements, please <a href="#contact">let the instructors know</a>. 
 		    </p>
 </body>
 </html>		
