add bios and images

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 
 
 			<h2>What is Git?</h2>
-
+			<div class="comic_wrap">
+			
+<img class="main_comic" src="images/mindy_kaling.png" alt="a screen shot of mindy kaling's instagram with a cartoon about work">
+<br/><div class="caption">Mindy could use some Git here...</div>
+</div>
 <p>
 Work smarter, collaborate faster and share code or other files with the library community using the popular version control system Git. Featuring a mix of git fundamentals and hands-on exercises, participants learn the basics of Git, learn how to use key commands, and how to use GitHub to their advantage, including sharing their own work and building upon the projects of others. 
 
@@ -76,6 +80,32 @@ Bring your laptop for an afternoon of hands on exploration!
 
 		    <h3>Accessibility Information</h3>
 		    <p>To come with room assignment. If you have specific accessibility requirements, please <a href="#contact">let the instructors know</a>. 
-		    </p>
+			</p>
+			
+			<h2>Who are we?</h2>
+			<p>The 3 of us all work for the libraries at Tufts University:</p>
+			<ul class="profiles">
+				<li id="KB">
+					<div class="image_wrap">
+						<img src="images/kateBron.jpg" alt="Kate Bronstad" class="prof_pic">
+					</div>	
+					Kate Bronstad is a Web Developer for the Tufts Libraries. Kate uses git daily & has taught Git for ALA & other organizations. 
+				<div class="pronouns">Pronouns: They/them, she/her</div>
+				</li>
+				<li id="AG">
+						<div class="image_wrap">
+				  <img src="images/AriGofman.jpeg" alt="Ari Gofman" class="prof_pic"> </div>
+				  Ari Gofman is the Social Science Data Librarian at Tisch Library, Tufts University where they teach Git (among other things) as a certified Carpentries instructor. Their professional interests include instruction, data services, social justice, and queer young adult literature.  
+		   
+				  <div class="pronouns">Pronouns: They/them/theirs</div>
+				</li>
+				<li id="HK">
+						<div class="image_wrap">
+						<img src="images/AriGofman.jpeg" alt="Ari Gofman" class="prof_pic">
+						</div> 
+					Heather Klish is the Systems Librarian for the libraries at Tufts University.
+					<div class="pronouns">Pronouns: They/them, she/her</div>
+				</li>
+			</ul>
 </body>
 </html>		
