--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Bring your laptop for an afternoon of hands on exploration!
 					<div class="image_wrap">
 							<picture>
 									<source media="(min-width: 1000px)" srcset="images/kateBron.jpg">
-									<img src="images/KateBron_200.jpg" alt="Ari Gofman" class="prof_pic">
+									<img src="images/KateBron_200.jpg" alt="Kate Bronstad" class="prof_pic">
 							 </picture>	
 						
 					</div>	
