change letter case for GH sensitivity

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<h2>What is Git?</h2>
 			<div class="comic_wrap">
 			
-<img class="main_comic" src="images/mindy_kaling.png" alt="a screen shot of mindy kaling's instagram with a cartoon about work">
+<img class="main_comic" src="images/mindy_kaling.PNG" alt="a screen shot of mindy kaling's instagram with a cartoon about work">
 <br/><div class="caption">Mindy 	could use some Git here...</div>
 </div>
 <p>
@@ -89,7 +89,7 @@ Bring your laptop for an afternoon of hands on exploration!
 					<div class="image_wrap">
 							<picture>
 									<source media="(min-width: 1000px)" srcset="images/kateBron.jpg">
-									<img src="images/KateBron_200.jpg" alt="Kate Bronstad" class="prof_pic">
+									<img src="images/kateBron_200.jpg" alt="Kate Bronstad" class="prof_pic">
 							 </picture>	
 						
 					</div>	
