--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <title>Beginning Git and GitHub</title>
 
 <head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="gtk_style/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <link href="gtk_stlye/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
   <!--[if IE]>
