--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 <ul class="no-bullets">
 	<li>Friday, June 21</li>
 	<li>12:00 PM - 4:00 PM</li>
-	<li>Kate Bronstad, Heather Klish, Ari Gofman </li>
+	<li>Kate Bronstad, Heather Klish, Ari Gofman. <span class="bio_link">We all work in the libraries at Tufts University.
+		<a href="#who">Read more about us below</a></span>.
+	 </li>
 	<li><a href="https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=518954&query=Git 
 		https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA info</a></li> </p>
 			</ul>
@@ -83,7 +85,7 @@ Bring your laptop for an afternoon of hands on exploration!
 		    <p>To come with room assignment. If you have specific accessibility requirements, please <a href="#contact">let the instructors know</a>. 
 			</p>
 			
-			<h2>Who are we?</h2>
+			<h2 id="who">Who are we?</h2>
 			<p>The 3 of us all work for the libraries at Tufts University:</p>
 			<ul class="profiles">
 				<li id="KB">
@@ -94,7 +96,7 @@ Bring your laptop for an afternoon of hands on exploration!
 							 </picture>	
 						
 					</div>	
-				<strong>Kate Bronstad</strong> Kate is a Web Developer for the Tufts Libraries. Kate uses Git daily & has taught Git for ALA & other organizations. 
+				<strong>Kate Bronstad</strong> Kate is a Web Developer for the Tufts Libraries. Kate uses Git daily. Along with Heather, Kate has taught Git for ALA & other organizations. 
 				<div class="pronouns">Pronouns: They/them, she/her</div>
 				</li>
 				<li id="AG">
