--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 			<h2 id="contact">Contact</h2>
            <p>Please email Kate Bronstad at <a href="mailto:kate.bronstad@tufts.edu">kate.bronstad@tufts.edu</a>.</p>
-
+     
 			
 
 
@@ -49,6 +49,7 @@
 <img class="main_comic" src="images/mindy_kaling.PNG" alt="a screen shot of mindy kaling's instagram with a cartoon about work">
 <br/><div class="caption">Mindy 	could use some Git here...</div>
 </div>
+<div class="install_notice">Learn how to <a href="install_git.html">install</a> git on your laptop - please do this before the workshop!</div>
 <p>
 Work smarter, collaborate faster and share code or other files with the library community using the popular version control system Git. Featuring a mix of Git fundamentals and hands-on exercises, participants learn the basics of Git, learn how to use key commands, and how to use GitHub to their advantage, including sharing their own work and building upon the projects of others. 
 
