--- a/install_git.html
+++ b/install_git.html
@@ -9,7 +9,7 @@
       -->
 	</head>
 	<body class="install">
-		<div id="nav">< <a href="index.html">Back to "Beginning Git & GitHub": Home</a></div>
+		<div id="nav"><a href="index.html">Back to "Beginning Git & GitHub": Home</a></div>
 		<h1 id="header">Installation</h1>
 		<div id="main">
 			<!--<ol>
@@ -169,7 +169,7 @@
         <p>You're ready to start working with Git on your computer!<!-- One last thing, though - you'll want to <a href="#key">set up a SSH key</a> on your computer and add that to your GitHub account. That way you can push and pull projects between your computer and GitHub with ease.</p>-->
 
     <h3 id="other">Install Git on Other Platforms</h3>
-    <p>So you're not using Windows or Mac? We're impressed! Try <a href="https://git-scm.com/download/">git-scm/downloads</a> for your OS and follow instructions from there.</p>    
+    <p>So you're not using Windows or Mac? Try <a href="https://git-scm.com/download/">git-scm/downloads</a> for your OS and follow instructions from there.</p>    
 
     <!--    <h2 id="key">Set up an SSH key to authenticate with GitHub</h3>
         <p>If you run the following command, it will create a key on your computer. <span class="note"> If you think you already have a key, you can run ls -al ~/.ssh to see if it's there - if it is, skip to the <a href="#copy">copying step</a></span>.</p>
