divs for FF, media q's for mobile

--- a/install_git.html
+++ b/install_git.html
@@ -37,7 +37,7 @@
 	Look for the computer screen on the right-hand side of the page.  
 	Click on Download 2.21.0 for Windows.  
 	Your computer should automatically launch an explorer window and ask you where to save the program on your computer.</div>
-	<img src="images/1-download.png" alt="download button for windows"></li>
+<div class="img-wrap"><img src="images/1-download.png" alt="download button for windows"></div></li>
 
 
 <li class="step"><div class="text">Navigate to where you saved the Git program .exe file.  
@@ -50,13 +50,13 @@
 	 </li>
 
 <li class="step"><div class="text">The Git License will display.  Read through and then Click Next to accept the terms of the license.</div>
-	 <img src="images/2-license.png" alt="git license"></li>	 
+	<div class="img-wrap"><img src="images/2-license.png" alt="git license"></div></li>	 
 
 
 <li class="step"><div class="text">Choose where Git will be installed. 
 	 Click Next to choose the default location provided unless you know you need to install
 	  the software somewhere else on your machine.</div>
-	<img src="images/3-destination.png" alt="file path where git will be installed">	 
+		<div class="img-wrap">	<img src="images/3-destination.png" alt="file path where git will be installed"></div>
 </li>
 
 <li class="step"><div class="text">Choose where Git will be installed. 
@@ -65,27 +65,27 @@
 		including Git Bash Here and Git GUI Here.  
 		This component will allow you to use the Windows Explorer context menu to access git Bash and Git Gui.   
 		All other options are optional.  See screenshot below.</div>
-	 <img src="images/4-components.png" alt="git installation window asking which components should be installed">	 
+		<div class="img-wrap"><img src="images/4-components.png" alt="git installation window asking which components should be installed">	 </div>
  </li>
 
  <li class="step"><div class="text">Select your Start menu Folder.  Choose Next to use the default.</div>
-	 <img src="images/5-startfolder.png" alt="start folder window">	 
+	<div class="img-wrap"> <img src="images/5-startfolder.png" alt="start folder window">	 </div>
  </li>
 
  <li class="step"><div class="text">Choose which default editor you would like Git to use.  
 	 For this class, choose ‘Use the Nano editor by default’ and click Next</div>
-	<img src="images/6-editor.png" alt="choose your editor window">	 
+	 <div class="img-wrap"><img src="images/6-editor.png" alt="choose your editor window"></div>	 
 </li>
 
 <li class="step"><div class="text">Choose how you would like to use Git from the command line. 
 	 You can choose ‘Git from the command line and also from 3rd-party software’ or ‘Use Git from Git Bash only’  </div>
-	 <img src="images/7-environment.png" alt="choose how to use git on command line"> 
+	 <div class="img-wrap"><img src="images/7-environment.png" alt="choose how to use git on command line"></div> 
  </li>
 
  <li class="step"><div class="text">Choose a SSL/TLS library.  Select ‘Use the native Windows Secure Channel library.  
 		This allows Git to use the certificates that are native to your machine 
 		and may avoid a path problem later on. </div>
-		<img src="images/8-https.png" alt="choose native windows secure channel library"> 
+		<div class="img-wrap"><img src="images/8-https.png" alt="choose native windows secure channel library"> </div>
 	</li>
 
 
@@ -93,15 +93,15 @@
 		Recommended to keep the default as this is better if you’re planning on sharing your project with others
 		 who may be using a different operating system.  
 		 Choose ‘Checkout Windows-style, commit Unix-style line endings’. </div>
-			<img src="images/9-lineendings.png" alt="default for line endings"></li>	 
+		 <div class="img-wrap">	<img src="images/9-lineendings.png" alt="default for line endings">	 </div>
 		</li>
  
 		<li class="step"><div class="text">Configure your terminal emulator to use with Git Bash. Use the default ‘Use MinTTY’</div>
-				<img src="images/10-emulator.png" alt="use MinTTY with git bash"> 
+			<div class="img-wrap">	<img src="images/10-emulator.png" alt="use MinTTY with git bash"> </div>
 			</li>
 
 			<li class="step"><div class="text">Configure extra options.  Check: Enable file system caching and Enable Git Credential Manager</div>
-				<img src="images/11-options.png" alt="extra options"> 
+				<div class="img-wrap">	<img src="images/11-options.png" alt="extra options"> </div>
 			</li>	
 
 			<li class="step"><div class="text">Choose Install to start the installation.</div>
