add pre-workshop instructions

--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
 <ul class="no-bullets">
 	<li>Friday, June 21</li>
 	<li>12:00 PM - 4:00 PM</li>
-	<li>Kate Bronstad, Heather Klish, Ari Gofman. <span class="bio_link">We all work in the libraries at Tufts University.
+	<li>Kate Bronstad, Ari Gofman, Heather Klish. <span class="bio_link">We all work in the libraries at Tufts University.
 		<a href="#who">Read more about us below</a></span>.
 	 </li>
+	
 	<li><a href="https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=518954&query=Git 
-		https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA info</a></li> </p>
+		https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA info</a></li>
+		<li><a href="prep.html">Instructions</a> for preparing for the workshop</li>
+	 </p>
 			</ul>
 
 			<h2 id="contact">Contact</h2>
