change wording on prep

--- a/prep.html
+++ b/prep.html
@@ -13,7 +13,9 @@
 		<div id="nav"><a href="index.html">Back to "Beginning Git & GitHub": Home</a></div>
 		<h1 id="header">Before the workshop</h1>
 		<div id="main">
-			We only have so much time to learn & practice Git in the workshop. Because of that,
+			First, thanks for signing up for the workshop! We're looking forward to 
+			meeting you and sharing what we know about Git.
+			Because we only have so much time in the actual workshop,
 			it would be very helpful if you could do a few things before you get to class:
 			<ul>
 				<li><a href="install_git.html">Install Git</a> on the computer you're bringing to class</li>
