add in survey link

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	<li><a href="https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=518954&query=Git 
 		https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA info</a></li>
 		<li><a href="prep.html">Instructions</a> for preparing for the workshop</li>
+		<li><a href="https://tufts.qualtrics.com/jfe/form/SV_3Ph7Pf2jTpNXVPL">Pre-workshop survey</a></li>
 	 </p>
 			</ul>
 
