--- a/prep.html
+++ b/prep.html
@@ -23,7 +23,9 @@
 				<li><a href="ssh_keys.html">Connect your workshop computer to GitHub</a> by creating an SSH key, and then copying and pasting that key into
 					your GitHub account settings.
 				</li>
+				<li>Also, if you haven't taken our <a href="https://tufts.qualtrics.com/jfe/form/SV_3Ph7Pf2jTpNXVPL">survey</a> yet, please do so now!</li>
 			</ul>
+
 			<p>If you have any questions, please <a href="index.html#contact">contact us</a>.</p>
 
 
