--- a/ssh_keys.html
+++ b/ssh_keys.html
@@ -60,7 +60,9 @@ Taken from <a href="https://help.github.com/en/articles/generating-a-new-ssh-key
 
 <li>When you're prompted to "Enter a file in which to save the key," press Enter. <br/>This accepts the default file location.<br>
 		Enter a file in which to save the key (/c/Users/you/.ssh/id_rsa): [Press enter]</li>
-<li>At the prompt, type a secure passphrase.   Remember this passphrase as you will be asked to enter it often.  You will not see the characters as you type.
+<li>At the prompt, type a secure passphrase, and then write it down so you'll remember it - this passphrase as you will be asked to enter it often. 
+	<em>NOTE: When you type your passphrase, you won't see the characters  appear on screen, nor will you see the
+		cursor move. This is due to security.</em>  
   <ul>
 		<li>Enter passphrase (empty for no passphrase): [Type a passphrase]
 		</li>
@@ -96,7 +98,7 @@ for existing SSH keys and make sure you’ve generated a new key.</p>
 <p>First, you need a Github account.  If you already have one, skip down to item 7.
 	<ol>
 <li>Go to <a href="http://github.com">http://github.com</a>
-		<li>2.	Create an account
+		<li>Create an account
 <ul><li>Select the free account unless you want a paid account</li></ul></li>
 <li>Once you have your Github account set up, go to your account settings, in the upper-right hand corner of the page and choose Settings</li>	
 <li>On the left-side menu, choose SSH and GPG keys</li>
@@ -108,6 +110,8 @@ for existing SSH keys and make sure you’ve generated a new key.</p>
 <li>On MacOS type:
 		<span class="inline-example">pbcopy < ~/.ssh/id_rsa.pub</span></li></ul>
 </li>
+<p><em>Note: when you run this command, nothing will seem to change on your computer. What this command does is copy the text of the 
+	key to your clipboard, which will enable you to paste it to GitHub.</em></p>
 <li>	Paste your SSH Key into the Key section of Github and Save.  
 	Your key should end with the email address you entered when you first created your key
 	</li>
