add nano to git config instructions

--- a/install_git.html
+++ b/install_git.html
@@ -188,6 +188,10 @@
 			<div class="example">
 				git config --global user.email "your email address"
 			</div>
+			Also, we're going to be using the "Nano" text editor in class, so tell git to make Nano your default editor:
+			<div class="example">
+				git config --global core.editor "nano"
+			</div>
 			<h2>Next Steps</h2>
 			<p><a href="ssh_keys.html">Set up an SSH Key</a> and connect your computer to GitHub</p>
 
