update resources with handouts

--- a/resources.html
+++ b/resources.html
@@ -17,15 +17,14 @@
         <a href ="index.html#contact">Contact info</a>
         <h3>Handouts</h3>
         <ul>
-          <li>Commandline </li>
-          <li>Git Basics</li>
-          <li>Collaboration Exercise</li>
-          <li>Branches</li>
+          <li><a href="files/Introduction_to_Shell.pdf">Command line</a></li>
+          <li><a href="files/WorkingWithGit.pdf">Git Basics</a></li>
+          <li><a href="files/Collaborating_in_git.pdf">Collaboration Exercise</a></li>
           <li>Project
             <ul>
-              <li>Project instructions</li>
-              <li>Edit text in index.html to personalize</li>
-              <li>Edit CSS in style2.css to change the look of the page</li>
+              <li><a href="files/Project.pdf">Project instructions</a></li>
+              <li><a href="files/printableHTMLExample.pdf">Edit text in index.html to personalize</a></li>
+              <li><a href="files/Edit_style2.pdf">Edit CSS in style2.css to change the look of the page</a></li>
             </ul>
           </li>
 
@@ -61,7 +60,8 @@
           <h3>Other helpful things</h3>
           <ul>
           <li><a href="https://pages.github.com/">Git Hub Pages: Quick websites</a> (includes <a href="https://help.github.com/articles/using-jekyll-with-pages">jekyll help</a> at bottom of page)</li>
-          </ul>     
+          <li><a href="https://git-scm.com/download/gui/windows">Git Gui Apps</a></li>  
+        </ul>     
 
        
         
