add resources link to index

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<li>Kate Bronstad, Ari Gofman, Heather Klish. <span class="bio_link">We all work in the libraries at Tufts University.
 		<a href="#who">Read more about us below</a></span>.
 	 </li>
-	
+	<li><a href="resources.html">Resources</a> - includes handouts from class</li>
 	<li><a href="https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=518954&query=Git 
 		https://2019.alaannual.org/registration/ticketed-events#LITA">Registration & ALA info</a></li>
 		<li><a href="prep.html">Instructions</a> for preparing for the workshop</li>
