--- a/resources.html
+++ b/resources.html
@@ -17,14 +17,14 @@
         <a href ="index.html#contact">Contact info</a>
         <h3>Handouts</h3>
         <ul>
-          <li><a href="files/Introduction_to_Shell.pdf">Command line</a></li>
-          <li><a href="files/WorkingWithGit.pdf">Git Basics</a></li>
-          <li><a href="files/Collaborating_in_git.pdf">Collaboration Exercise</a></li>
+          <li><a href="files/Introduction_to_Shell.pdf">Command line</a> [PDF]</li>
+          <li><a href="files/WorkingWithGit.pdf">Git Basics</a> [PDF]</li>
+          <li><a href="files/Collaborating_in_git.pdf">Collaboration Exercise</a> [PDF]</li>
           <li>Project
             <ul>
-              <li><a href="files/Project.pdf">Project instructions</a></li>
-              <li><a href="files/printableHTMLExample.pdf">Edit text in index.html to personalize</a></li>
-              <li><a href="files/Edit_style2.pdf">Edit CSS in style2.css to change the look of the page</a></li>
+              <li><a href="files/Project.pdf">Project instructions</a> [PDF]</li>
+              <li><a href="files/printableHTMLExample.pdf">Edit text in index.html to personalize</a> [PDF]</li>
+              <li><a href="files/Edit_style2.pdf">Edit CSS in style2.css to change the look of the page</a> [PDF]</li>
             </ul>
           </li>
 
